--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,14 @@
 
 body {
-    background-color: black;
+    background-color: white;
     font: sans-serif;
+	margin: 20px 20px;
+}
+
+ul {
+	list-style-type: none;
+}
+
+a {
+	text-decoration: none;
 }
