--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@
 body {
     background-color: #3e3d32;
     color: white;
-    font: sans-serif;
+    font-family: sans-serif;
 	margin: 20px 20px;
 }
 
